--- a/styles.css
+++ b/styles.css
@@ -130,9 +130,8 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center; /* Centers content inside */
-    margin: 50px auto; /* Centered */
+    margin: 50px auto 50px 100px; /* Centered */
     overflow: hidden; /* Prevents unwanted scrollbars */
-    padding-left: 100px; /* Adds some left spacing */
 }
 
 /* Page Title Inside White Box */
