--- a/styles.css
+++ b/styles.css
@@ -371,13 +371,16 @@ footer {
     }
 }
 
-/* Hide confirmation page initially */
-.hidden {
-    display: none;
-}
-
 /* Confirmation Page Styling */
 #confirmationPage {
+    display: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+/* Make it visible */
+.show {
+    opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
