--- a/styles.css
+++ b/styles.css
@@ -379,9 +379,9 @@ footer {
 }
 
 /* Make it visible */
-.show {
+.confirmation-container.show {
     opacity: 1;
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -394,6 +394,9 @@ footer {
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .email-icon {
